--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,7 +1,6 @@
 linters:
   enable:
     - gofmt
-    - golint
     - govet
     - errcheck
     - staticcheck
@@ -15,38 +14,32 @@ linters:
     - gocritic
     - gocognit
     - goconst
-    - goccy
-    - gocyclo
-    - godeadcode
-    - godot
-    - gofmt
     - goimports
-    - golint
-    - gomnd
     - goprintffuncname
     - gosec
     - gosimple
-    - gostyle
-    - gotype
     - govet
     - ineffassign
-    - interfacer
-    - lll
     - misspell
-    - nakedret
-    - scopelint
     - staticcheck
-    - structcheck
-    - stylecheck
     - typecheck
     - unconvert
     - unparam
     - unused
-    - varcheck
     - whitespace
 
 run:
-  deadline: 5m
+  timeout: 5m
+  tests: true
+  skip-dirs:
+    - vendor
+
+linters-settings:
+  gocyclo:
+    min-complexity: 15
+  goconst:
+    min-len: 3
+    min-occurrences: 3
 
 issues:
   exclude-rules:
@@ -54,7 +47,6 @@ issues:
       linters:
         - gocyclo
         - errcheck
-        - dupl
         - gosec
 
 output:
